<resources>
    <string name="app_name">General Project</string>

    <!-- _________ Toasts _________ -->
    <string name="permission_required">Permission Required</string>

    <!-- _________ Content Descriptions _________ -->

    <string name="header_image">Header Image</string>

    <!-- _________ Menu _________ -->

    <!--menu_delete-->
    <string name="delete_all_items">Delete All Items</string>

    <!-- _________ UI _________ -->

    <!-- StartScreen -->
    <string name="start_screen">Start Screen</string>

    <!--Home-->
    <string name="room_database">Room Database</string>
    <string name="gallery">Gallery</string>
    <string name="activity_result"><![CDATA[Activity Results]]></string>

    <!-- nav_drawer_content -->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="update_app">Update App</string>
    <string name="change_language">Change Language</string>
    <string name="remove_ads">Remove Ads</string>

    <!--EnlistCountry-->
    <string name="empty_list">No Items Found \n Click \'+\' to add items</string>

    <!-- FragmentSampleResult -->
    <string name="counter_activity">Counter Activity</string>
    <string name="results">Results:</string>

    <!--SampleResult-->
    <string name="type_something">Type Something…</string>
    <string name="submit">Submit</string>

    <!--Mix-->
    <string name="todo" translatable="false">TODO</string>
    <string name="exit_message">Do you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="language_screen">Language Screen</string>
    <string name="country">Country</string>
    <string name="_continue">Continue</string>
    <string name="continue_text">Continue</string>
    <string name="select_your_language">Select your language</string>
    <string name="ask_for_permission">Ask For Permission</string>
    <string name="permission_screen">Permission Screen</string>
    <string name="no_permission_is_granted">No Permission is granted!</string>
    <string name="all_permission_granted">All Permissions are successfully granted!, Now do your work.</string>
    <string name="please_grant_permission">Please grant permission to access sample things…</string>
    <string name="enable">Enable</string>
    <string name="allow_permissoin_settings">Allow permission from \'Setting\' to proceed</string>
    <string name="setting">Setting</string>



</resources>