<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.home.FragmentHome">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/btn_room_db"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_room_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_database"
            android:layout_marginVertical="@dimen/_30sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_result_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery_screen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_result_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_result"
            app:layout_constraintBottom_toTopOf="@+id/btn_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_room_db" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@+id/btn_result_screen" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>