<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        app:imageAsset='@{"icon_header"}'-->

        <ImageView
            android:id="@+id/iv_header_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/header_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:imageId="@{@drawable/icon_header}"
            />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_header_image" />

        <View
            android:id="@+id/line_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/tv_nav_version_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_divider">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nav_privacy_policy"
                    style="@style/DrawerItemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_drawer_item"
                    android:text="@string/privacy_policy"
                    app:drawableStartCompat="@drawable/ic_nav_privacy_30" />

                <TextView
                    android:id="@+id/nav_share_app"
                    style="@style/DrawerItemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_drawer_item"
                    android:text="@string/share_app"
                    app:drawableStartCompat="@drawable/ic_nav_share_30" />

                <TextView
                    android:id="@+id/nav_rate_us"
                    style="@style/DrawerItemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_drawer_item"
                    android:text="@string/rate_us"
                    app:drawableStartCompat="@drawable/ic_nav_rate_30" />

                <TextView
                    android:id="@+id/nav_feedback"
                    style="@style/DrawerItemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_drawer_item"
                    android:fontFamily="@font/poppins"
                    android:text="@string/feedback"
                    app:drawableStartCompat="@drawable/ic_nav_feedback_30" />

                <TextView
                    android:id="@+id/nav_update_app"
                    style="@style/DrawerItemTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_drawer_item"
                    android:text="@string/update_app"
                    app:drawableStartCompat="@drawable/ic_nav_update_app_30" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tv_nav_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Version 1.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>