<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        tools:context=".ui.dialogs.DialogExit">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_image_Exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_Exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/exit_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/siv_image_Exit"
            app:layout_constraintStart_toStartOf="@+id/siv_image_Exit"
            app:layout_constraintTop_toBottomOf="@+id/siv_image_Exit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_exit_Exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/exit"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mb_cancel_Exit"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_Exit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_cancel_Exit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:textColor="?attr/colorControlNormal"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/mb_exit_Exit"
            app:layout_constraintEnd_toStartOf="@+id/mb_exit_Exit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mb_exit_Exit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>